--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
-* Update Card type to be able to display itself; this will be necessary with the Columns on the board.
-* Build Columns datatype, with 2 child lists - face_up, face_down
-* Build Foundation datatype, which will be tied to a suit
-* Build Board datatype to hold the tableau and foundation
-* Build 'dealing' function that distributes the deck amongst the Columns on the tableau
+- [x] Update Card type to be able to display itself; this will be necessary with the Columns on the board.
+- [x] Build Columns datatype, with 2 child lists - face_up, face_down
+- [ ] Build Foundation datatype, which will be tied to a suit
+- [x] Build Board datatype to hold the tableau and foundation
+- [x] Build 'dealing' function that distributes the deck amongst the Columns on the tableau
+- [ ] Make dealing function shuffle
+- [ ] Create function for displaying the board (deck, discard, tableau, foundation)
+- [ ] Enumerate valid moves on the current state of the board
